--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="https://g.alicdn.com/ais-fed/N3_2.0/2.1.2/css/N3.min.css">
     <link rel="stylesheet" href="../static/style/index.css">
     <script type="text/javascript" src="https://g.alicdn.com/sj/lib/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="https://g.alicdn.com/ais-fed/N3_2.0/2.1.2/js/N3.min.js"></script>
     <script type="text/javascript" src="../static/script/index.js"></script>
-
-
   </head>
   <body>
-    <div id="app"></div>    <!-- built files will be auto injected -->
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
